<resources>
    <string name="app_name">TipnGo</string>
    <string name="action_settings">Settings</string>
    <string name="tipperLoginButt">Login</string>
    <string name="tipperRegisterButt">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="welcome_tipper">Welcome Tipper</string>
    <string name="welcome_tippee">Welcome Tippee</string>
    <string name="welcome_tipper_button">I\'ll be Giving Tips</string>
    <string name="welcome_tippee_button">I\'ll be Receiving Tips</string>
    <string name="welcome_title">Welcome to Tip n\' Go</string>
    <string name="tipper_register_title">New Tipper</string>
    <string name="tippee_register_title">New Tippee</string>
    <string name="tipper_balance_message">Your Balance is: </string>
    <string name="settings">Settings</string>
    <string name="accounts">Account</string>
    <string name="logout">Logout</string>
    <string name="recent_activity_title">Recent Activity</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Please allow access to locations</string>
    <string name="ok">OK</string>
    <string name="search_by_location_title">Search by Location</string>
    <string name="scan_qr_code_title">Scan QR Code</string>
    <string name="search_by_name">Search by Name</string>
    <string name="search">Search</string>
    <string name="qr_message">Please focus on QR code</string>
    <string name="tippee_bank_account_title">Bank Accounts / Credit Cards</string>
    <string name="add_bank">Add</string>
    <string name="tippee_no_account_message">No account added</string>
    <string name="tippee_qr_generate_title">QR Code</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="address_line_2">Line 2</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="date">Date</string>
</resources>
